// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentLoader snapshots renders correctly the basic version 1`] = `
<Svg
  height={124}
  interval={0.25}
  style={Object {}}
  viewBox="0 0 476 124"
  width={476}
>
  <Rect
    clipPath="url(#snapshots-animated-diff)"
    fill="url(#snapshots-diff)"
    height="100%"
    width="100%"
    x="0"
    y="0"
  />
  <Defs>
    <ClipPath
      id="snapshots-animated-diff"
    >
      <Rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <Rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <Rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <Rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <Rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <Circle
        cx="20"
        cy="20"
        r="20"
      />
    </ClipPath>
    <LinearGradient
      id="snapshots-diff"
      style={Object {}}
      x1="-100%"
      x2="0%"
      y1={0}
      y2={0}
    >
      <Stop
        offset={0}
        stopColor="#f5f6f7"
      />
      <Stop
        offset={0.5}
        stopColor="#eee"
      />
      <Stop
        offset={1}
        stopColor="#f5f6f7"
      />
    </LinearGradient>
  </Defs>
</Svg>
`;

exports[`ContentLoader snapshots renders correctly with beforeMask 1`] = `
<Svg
  interval={0.25}
  style={Object {}}
>
  <Rect
    x="123"
  />
  <Rect
    x="456"
  />
  <Rect
    clipPath="url(#snapshots-animated-diff)"
    fill="url(#snapshots-diff)"
    height="100%"
    width="100%"
    x="0"
    y="0"
  />
  <Defs>
    <ClipPath
      id="snapshots-animated-diff"
    >
      <Rect />
    </ClipPath>
    <LinearGradient
      id="snapshots-diff"
      style={Object {}}
      x1="-100%"
      x2="0%"
      y1={0}
      y2={0}
    >
      <Stop
        offset={0}
        stopColor="#f5f6f7"
      />
      <Stop
        offset={0.5}
        stopColor="#eee"
      />
      <Stop
        offset={1}
        stopColor="#f5f6f7"
      />
    </LinearGradient>
  </Defs>
</Svg>
`;

exports[`ContentLoader snapshots renders correctly with beforeMask 2`] = `
<Svg
  interval={0.25}
  style={Object {}}
>
  <Rect
    clipPath="url(#snapshots-animated-diff)"
    fill="url(#snapshots-diff)"
    height="100%"
    width="100%"
    x="0"
    y="0"
  />
  <Defs>
    <ClipPath
      id="snapshots-animated-diff"
    >
      <Rect />
    </ClipPath>
    <LinearGradient
      id="snapshots-diff"
      style={Object {}}
      x1="-100%"
      x2="0%"
      y1={0}
      y2={0}
    >
      <Stop
        offset={0}
        stopColor="#f5f6f7"
      />
      <Stop
        offset={0.5}
        stopColor="#eee"
      />
      <Stop
        offset={1}
        stopColor="#f5f6f7"
      />
    </LinearGradient>
  </Defs>
</Svg>
`;

exports[`ContentLoader snapshots renders correctly with viewBox defined 1`] = `
<Svg
  height={124}
  interval={0.25}
  style={Object {}}
  viewBox="0 0 100 100"
  width={476}
>
  <Rect
    clipPath="url(#snapshots-animated-diff)"
    fill="url(#snapshots-diff)"
    height="100%"
    width="100%"
    x="0"
    y="0"
  />
  <Defs>
    <ClipPath
      id="snapshots-animated-diff"
    >
      <Rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <Rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <Rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <Rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <Rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <Circle
        cx="20"
        cy="20"
        r="20"
      />
    </ClipPath>
    <LinearGradient
      id="snapshots-diff"
      style={Object {}}
      x1="-100%"
      x2="0%"
      y1={0}
      y2={0}
    >
      <Stop
        offset={0}
        stopColor="#f5f6f7"
      />
      <Stop
        offset={0.5}
        stopColor="#eee"
      />
      <Stop
        offset={1}
        stopColor="#f5f6f7"
      />
    </LinearGradient>
  </Defs>
</Svg>
`;

exports[`ContentLoader snapshots renders correctly with viewBox defined and sizes defined too 1`] = `
<Svg
  height={100}
  interval={0.25}
  style={Object {}}
  viewBox="0 0 100 100"
  width={100}
>
  <Rect
    clipPath="url(#snapshots-animated-diff)"
    fill="url(#snapshots-diff)"
    height="100%"
    width="100%"
    x="0"
    y="0"
  />
  <Defs>
    <ClipPath
      id="snapshots-animated-diff"
    >
      <Rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <Rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <Rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <Rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <Rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <Circle
        cx="20"
        cy="20"
        r="20"
      />
    </ClipPath>
    <LinearGradient
      id="snapshots-diff"
      style={Object {}}
      x1="-100%"
      x2="0%"
      y1={0}
      y2={0}
    >
      <Stop
        offset={0}
        stopColor="#f5f6f7"
      />
      <Stop
        offset={0.5}
        stopColor="#eee"
      />
      <Stop
        offset={1}
        stopColor="#f5f6f7"
      />
    </LinearGradient>
  </Defs>
</Svg>
`;

exports[`ContentLoader snapshots renders correctly with viewBox empty 1`] = `
<Svg
  height={124}
  interval={0.25}
  style={Object {}}
  viewBox=""
  width={476}
>
  <Rect
    clipPath="url(#snapshots-animated-diff)"
    fill="url(#snapshots-diff)"
    height="100%"
    width="100%"
    x="0"
    y="0"
  />
  <Defs>
    <ClipPath
      id="snapshots-animated-diff"
    >
      <Rect
        height="6"
        rx="3"
        width="88"
        x="48"
        y="8"
      />
      <Rect
        height="6"
        rx="3"
        width="52"
        x="48"
        y="26"
      />
      <Rect
        height="6"
        rx="3"
        width="410"
        x="0"
        y="56"
      />
      <Rect
        height="6"
        rx="3"
        width="380"
        x="0"
        y="72"
      />
      <Rect
        height="6"
        rx="3"
        width="178"
        x="0"
        y="88"
      />
      <Circle
        cx="20"
        cy="20"
        r="20"
      />
    </ClipPath>
    <LinearGradient
      id="snapshots-diff"
      style={Object {}}
      x1="-100%"
      x2="0%"
      y1={0}
      y2={0}
    >
      <Stop
        offset={0}
        stopColor="#f5f6f7"
      />
      <Stop
        offset={0.5}
        stopColor="#eee"
      />
      <Stop
        offset={1}
        stopColor="#f5f6f7"
      />
    </LinearGradient>
  </Defs>
</Svg>
`;
